--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
-group = 'academy.ingress'
+group = 'az.growlab'
 version = '0.0.1-SNAPSHOT'
 
 java {
@@ -23,6 +23,7 @@ dependencies {
     implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.1.0'
     compileOnly 'org.projectlombok:lombok'
     implementation "org.mapstruct:mapstruct:1.5.5.Final"
+    implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.1.1'
     annotationProcessor 'org.projectlombok:lombok'
     implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
