--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,8 @@ spring:
     password: 1234
   liquibase:
     change-log: classpath:/db/changelog/db.changelog-master.yaml
+  main:
+    allow-bean-definition-overriding: true
 
 jwt:
   token:
